Update portfolio details and structure in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Dev Yuri Marinho — Portfólio</title>
+  <title>Portfolio Yuri Marinho</title>
 
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="css/layout.css" />
@@ -74,15 +74,23 @@
         </div>
 
         <div class="skill-category">
-          <h3 class="skill-category-title">Ferramentas e Infraestrutura</h3>
+          <h3 class="skill-category-title">Banco de Dados</h3>
+          <div class="skill-list">
+            <span class="skill-tag">MySQL</span>
+            <span class="skill-tag">SQLite</span>
+          </div>
+        </div>
+
+        <div class="skill-category">
+          <h3 class="skill-category-title">Ferramentas</h3>
           <div class="skill-list">
             <span class="skill-tag">Git</span>
             <span class="skill-tag">GitHub</span>
             <span class="skill-tag">Figma</span>
             <span class="skill-tag">Trello</span>
-            <span class="skill-tag">MySQL</span>
           </div>
         </div>
+
       </div>
     </div>
   </section>
