Fix HTML formatting and add missing elements

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           <div class="skill-list">
             <span class="skill-tag">MySQL</span>
             <span class="skill-tag">SQLite</span>
+            <span class="skill-tag">MongoDB</span>
           </div>
         </div>
 
@@ -135,54 +136,64 @@
       
       <!--Inicio container-->
       <div class="containerSites">
-        <!--FOTO 1-->
+        <!--WebSite 1-->
         <div class="card-group">
           <div class="card">
             <a href="https://marinhonetwork.vercel.app/home/" target="_blank">
-              <img src="/src/marinhossp.jpg" alt="Minha foto 1">
+              <img src="/src/marinhossp.jpg" alt="WebSite 1">
             </a>
           </div>
-          <p class="card-desc">WebSite que desenvolvi para a Advocacia Marinho sociedade individual de Advocacia.</p>
+          <p class="card-desc">Site Institucional – Marinho Sociedade Individual de Advocacia</p>
         </div>
 
-        <!--FOTO 2-->
+        <!--WebSite 2-->
         <div class="card-group">
           <div class="card">
             <a href="https://useekyle.vercel.app/" target="_blank">
-              <img src="/src/useekyle.jpg" alt="Minha foto 2">
+              <img src="/src/useekyle.jpg" alt="WebSite 2">
             </a>
           </div>
-          <p class="card-desc">WebSite que desenvolvi para a loja de roupas UseeKyle.</p>
+          <p class="card-desc">E-commerce Conceitual – UseKyle (Loja de Roupas)</p>
         </div>
 
-        <!--FOTO 3-->
+        <!--WebSite 3-->
         <div class="card-group">
           <div class="card">
             <a href="https://marinhonetwork.vercel.app/in/" target="_blank">
-              <img src="/src/MarinhosNetwork.png" alt="Minha foto 3">
+              <img src="/src/MarinhosNetwork.png" alt="WebSite 3">
             </a>
           </div>
-          <p class="card-desc">Marinhos Network, um mini projeto que criei.</p>
+          <p class="card-desc">Projeto Pessoal – Marinhos Network</p>
         </div>
 
-        <!--FOTO 4-->
+        <!--WebSite 4-->
         <div class="card-group">
           <div class="card">
             <a href="https://marinhonetwork.vercel.app/home/" target="_blank">
-              <img src="/src/me.JPG" alt="Minha foto 4">
+              <img src="/src/me.JPG" alt="WebSite 4">
             </a>
           </div>
-          <p class="card-desc">Primeiro WebSite desenvolvido por mim.</p>
+          <p class="card-desc">Portfólio Pessoal - Web Developer</p>
         </div>
 
-        <!--FOTO 5-->
+        <!--WebSite 5-->
         <div class="card-group">
           <div class="card">
             <a href="https://convite-github.vercel.app/" target="_blank">
-              <img src="/src/InviteGitHub.jpg" alt="Minha foto 5">
+              <img src="/src/InviteGitHub.jpg" alt="WebSite 5">
             </a>
           </div>
-          <p class="card-desc">Convite reativo para seguir meu GitHub.</p>
+          <p class="card-desc">Projeto Interativo – Convite para GitHub</p>
+        </div>
+
+        <!--FOTO 6-->
+        <div class="card-group">
+          <div class="card">
+            <a href="https://curriculo-yuri-marinho.vercel.app/" target="_blank">
+              <img src="/src/curriculo.jpg" alt="Minha foto 6">
+            </a>
+          </div>
+          <p class="card-desc">Meu currículo online.</p>
         </div>
 
       </div>
