Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <img src="/src/marinhossp.jpg" alt="WebSite 1">
             </a>
           </div>
-          <p class="card-desc">Site Institucional – Marinho Sociedade Individual de Advocacia</p>
+          <p class="card-desc">Site Corporativo – Marinho Sociedade Individual de Advocacia</p>
         </div>
 
         <!--WebSite 2-->
