--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
           <h3 class="skill-category-title">Desenvolvimento Back-End</h3>
           <div class="skill-list">
             <span class="skill-tag">Java</span>
+            <span class="skill-tag">JDBC</span>
             <span class="skill-tag">Python</span>
+            <span class="skill-tag">Hybernate</span>
             <span class="skill-tag">Spring Boot</span>
           </div>
         </div>
@@ -87,6 +89,7 @@
           <div class="skill-list">
             <span class="skill-tag">Git</span>
             <span class="skill-tag">GitHub</span>
+            <span class="skill-tag">GitLab</span>
             <span class="skill-tag">Figma</span>
             <span class="skill-tag">Trello</span>
           </div>
