--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </p>
         <p class="about-text">
           Possuo conhecimentos em desenvolvimento Back-End e Front-End, trabalhando com tecnologias como
-          Java, Python, JavaScript e frameworks como Spring Boot e Node.js. Estou constantemente aprendendo
+          Java, Python, JavaScript e frameworks como Hybernate e Spring Boot. Estou constantemente aprendendo
           e desenvolvendo projetos para aprimorar minhas habilidades técnicas.
         </p>
       </div>
