--- a/index.html
+++ b/index.html
@@ -189,14 +189,24 @@
           <p class="card-desc">Projeto Interativo – Convite para GitHub</p>
         </div>
 
-        <!--FOTO 6-->
+        <!--WebSite 6-->
         <div class="card-group">
           <div class="card">
             <a href="https://curriculo-yuri-marinho.vercel.app/" target="_blank">
-              <img src="/src/curriculo.jpg" alt="Minha foto 6">
+              <img src="/src/curriculo.jpg" alt="WebSite 6">
             </a>
           </div>
           <p class="card-desc">Meu currículo online.</p>
+        </div>
+
+        <!--WebSite 7-->
+        <div class="card-group">
+          <div class="card">
+            <a href="https://qrcodemania.vercel.app/" target="_blank">
+              <img src="/src/QRGenerator.jpg" alt="WebSite 7">
+            </a>
+          </div>
+          <p class="card-desc">Gerador de QR Codes opensource, sem necessidade de login ou anuncios.</p>
         </div>
 
       </div>
