Atualização em projetos e adição de website desenvolvido

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         <article class="project-card">
           <h3 class="project-title">LLM Chatbot</h3>
           <p class="project-description">
-            Implementação de um chatbot utilizando Large Language Models (LLM), demonstrando estudos em IA e NLP.
+            Projeto simples de chatbot utilizando conceitos iniciais de Large Language Models (LLM). Focado em
+            compreender integração com APIs de IA, estrutura básica de prompts e fluxo de conversação.
           </p>
           <a class="project-link" href="https://github.com/ymarinho2025/LLM-ChatBot" target="_blank"
             rel="noopener noreferrer">
@@ -118,11 +119,24 @@
         </article>
 
         <article class="project-card">
-          <h3 class="project-title">Projetos Java</h3>
+          <h3 class="project-title">Java JDBC</h3>
           <p class="project-description">
-            Coleção de projetos em Java para treino de POO e organização, incluindo exemplos e exercícios práticos.
+            Projeto introdutório em Java utilizando JDBC para conexão com banco de dados. Aplicação prática dos
+            fundamentos de Programação Orientada a Objetos e manipulação básica de dados.
           </p>
-          <a class="project-link" href="https://github.com/ymarinho2025/Projetos-JAVA" target="_blank"
+          <a class="project-link" href="https://github.com/ymarinho2025/Java-JDBC" target="_blank"
+            rel="noopener noreferrer">
+            Ver no GitHub <span aria-hidden="true">→</span>
+          </a>
+        </article>
+
+        <article class="project-card">
+          <h3 class="project-title">Demo DAO JDBC</h3>
+          <p class="project-description">
+            Exercício prático de implementação do padrão DAO com JDBC, demonstrando organização de código, separação de
+            responsabilidades e acesso estruturado ao banco de dados.
+          </p>
+          <a class="project-link" href="https://github.com/ymarinho2025/demo-dao-jdbc" target="_blank"
             rel="noopener noreferrer">
             Ver no GitHub <span aria-hidden="true">→</span>
           </a>
@@ -136,7 +150,7 @@
     <div class="container">
       <h2 class="section-title">Sites Desenvolvidos</h2>
       <p class="section-subtitle">Alguns projetos web publicados:</p>
-      
+
       <!--Inicio container-->
       <div class="containerSites">
         <!--WebSite 1-->
@@ -207,6 +221,16 @@
             </a>
           </div>
           <p class="card-desc">Gerador de QR Codes opensource, sem necessidade de login ou anuncios.</p>
+        </div>
+
+        <!--WebSite 8-->
+        <div class="card-group">
+          <div class="card">
+            <a href="https://doceeduliv.vercel.app/" target="_blank">
+              <img src="/src/DuLiv.jpg" alt="WebSite 8">
+            </a>
+          </div>
+          <p class="card-desc">E-commerce - Docee DuLiv (doces artesanais para pessoas com restrições alimentares)</p>
         </div>
 
       </div>
