Correção website Lawyerssp

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <!--WebSite 1-->
         <div class="card-group">
           <div class="card">
-            <a href="https://marinhonetwork.vercel.app/home/" target="_blank">
+            <a href="https://lawyerssp.vercel.app/" target="_blank">
               <img src="/src/marinhossp.jpg" alt="WebSite 1">
             </a>
           </div>
