--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="#sobre" class="btn btn-primary">Sobre mim</a>
         <a href="#habilidades" class="btn">Habilidades</a>
         <a href="#projetos" class="btn">Projetos</a>
+        <a href="#sites" class="btn">Sites</a>
         <a href="#contato" class="btn">Fale comigo</a>
       </div>
     </div>
